New way on how-to add the tags ( right now 'taggar' ).